0.9.0/_sources/generated/statsmodels.miscmodels.count.PoissonGMLE.rst.txt
statsmodels.miscmodels.count.PoissonGMLE
========================================

.. currentmodule:: statsmodels.miscmodels.count

.. autoclass:: PoissonGMLE

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~PoissonGMLE.expandparams
    
    
      ~PoissonGMLE.fit
    
    
      ~PoissonGMLE.from_formula
    
    
      ~PoissonGMLE.hessian
    
    
      ~PoissonGMLE.hessian_factor
    
    
      ~PoissonGMLE.information
    
    
      ~PoissonGMLE.initialize
    
    
      ~PoissonGMLE.loglike
    
    
      ~PoissonGMLE.loglikeobs
    
    
      ~PoissonGMLE.nloglike
    
    
      ~PoissonGMLE.nloglikeobs
    
    
      ~PoissonGMLE.predict
    
    
      ~PoissonGMLE.predict_distribution
    
    
      ~PoissonGMLE.reduceparams
    
    
      ~PoissonGMLE.score
    
    
      ~PoissonGMLE.score_obs
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~PoissonGMLE.endog_names
      ~PoissonGMLE.exog_names
   
   