v0.10.2/_sources/generated/statsmodels.miscmodels.count.PoissonGMLE.rst.txt
statsmodels.miscmodels.count.PoissonGMLE
========================================

.. currentmodule:: statsmodels.miscmodels.count

.. autoclass:: PoissonGMLE

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         PoissonGMLE.expandparams
         PoissonGMLE.fit
         PoissonGMLE.from_formula
         PoissonGMLE.hessian
         PoissonGMLE.hessian_factor
         PoissonGMLE.information
         PoissonGMLE.initialize
         PoissonGMLE.loglike
         PoissonGMLE.loglikeobs
         PoissonGMLE.nloglike
         PoissonGMLE.nloglikeobs
         PoissonGMLE.predict
         PoissonGMLE.predict_distribution
         PoissonGMLE.reduceparams
         PoissonGMLE.score
         PoissonGMLE.score_obs



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         PoissonGMLE.endog_names
         PoissonGMLE.exog_names

